--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_course
-spring.datasource.username=postgres
-spring.datasource.password=password1234
+sspring.datasource.url = =${DATABASE_URL}
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.dll-auto = none
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.format_sql= false
 
-jwt.secret=MYJWTSECRET
-jwt.expiration=3600000
+jwt.secret = ${JWT_SECRET}
+jwt.expiration = ${JWT_EXPIRATION}
+
